# smart_desk-front

./: README.md  pyproject.toml
src/: app.py  quality_calculation.py  tools.py
src/params/: ROOMS.py  gauge_params.py
